# resa

./: .gitignore  Cargo.toml  README.md  settings.ini
src/: main.rs  settings.ini
src/logging/: device_info_collector.rs  mod.rs  sys_log.rs
src/system/: device_info_collector.rs  error.rs  file.rs  ini.rs  layer.rs  log.rs  log_flags.rs  mesh.rs  mod.rs  vk_renderer.rs  window.rs
src/system/rendering/: metal_renderer.rs  mod.rs  renderer.rs  vk_renderer.rs
src/system/rendering/mesh/: mesh.rs  vertex.rs
src/system/rendering/vulkan/: device.rs  global.rs  mod.rs  pipeline.rs  render_loop.rs  renderer.rs  renderer_old.rs  swapchain.rs
