[package]
name = "resa"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0.1"
lazy_static = "1.4.0"
chrono = "0.4"
bitflags = "1.3.2"
ansi_term = "0.12.1"
sysinfo = "0.23.5"
num-format = "0.4.0"
winit = "0.26.1"
vulkano = "0.29.0"
bytemuck = "1.9.1"